--- a/task.html
+++ b/task.html
@@ -59,7 +59,7 @@
     <div class="para-c2">
             <h3> Increase Business on Social Media Reach</h3>
             <p> Using our network of industry influencers, we help promote your content </p>
-             <button> Get started </button>
+             <button> Get started  </button>
     </div>
     </div>
 
@@ -76,6 +76,7 @@
             <div>
                 <img style="width: 93%;" src="./assets/image/Rectangle 334.png" alt="">
                 <p class="date">AUGUST 17, 2021</p>
+                  <p class="date">doaa</p>
                 <h5> <a href="">How to get hired at a top Digital Marketing</a></h5>
                 <p>Agency life. We’ve all seen the photos posted on social media – the cool...</p>
                 <button><a href=""><img src="./assets/image/Show.svg" alt=""></a></button>
