--- a/task.html
+++ b/task.html
@@ -12,6 +12,7 @@
             <h1 class="a-p2"> Digital Marketing </h1>
             <p id="a-p3"> Completely synergize resource taxing relationships via premier <br> niche markets. Professionally cultivate one-to-one customer</p>
             <button> Get Started </button>
+            <p> Completely synergize resource taxing relationships via premier <br> niche markets. Professionally cultivate one-to-one customer</p>
         </div>
 
     <div id="img">
